[package]
name = "esplora-client"
version = "0.12.2"
edition = "2021"
authors = [
  "Alekos Filini <alekos.filini@gmail.com>",
  "Bitcoin Dev Kit Developers"
]
license = "MIT"
homepage = "https://github.com/bitcoindevkit/rust-esplora-client"
repository = "https://github.com/bitcoindevkit/rust-esplora-client"
documentation = "https://docs.rs/esplora-client/"
description = "Bitcoin Esplora API client library. Supports plaintext, TLS and Onion servers. Blocking or async"
keywords = ["bitcoin", "esplora"]
readme = "README.md"
rust-version = "1.75.0"

[lib]
name = "esplora_client"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
bitcoin = { version = "0.32", features = ["serde", "std"], default-features = false }
hex = { version = "0.2", package = "hex-conservative" }
log = "^0.4"
bitreq = { version = "0.3.4", optional = true }

# default async runtime
tokio = { version = "1", features = ["time"], optional = true }

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"] }
electrsd = { version = "0.36.1", features = ["legacy", "esplora_a33e97e1", "corepc-node_29_0"] }
lazy_static = "1.4.0"

[features]
default = ["blocking", "blocking-https", "async", "async-https", "tokio"]
blocking = ["bitreq/proxy", "bitreq/json-using-serde"]
blocking-https = ["blocking", "bitreq/https"]
blocking-https-native = ["blocking", "bitreq/https-native-tls"]
blocking-https-rustls = ["blocking", "bitreq/https-rustls"]
blocking-https-rustls-probe = ["blocking", "bitreq/https-rustls-probe"]

tokio = ["dep:tokio"]
async = ["bitreq/async", "bitreq/proxy", "bitreq/json-using-serde", "tokio?/time"]
async-https = ["async", "bitreq/async-https"]
async-https-native = ["async", "bitreq/async-https-native-tls"]
async-https-rustls = ["async", "bitreq/async-https-rustls"]
async-https-rustls-probe = ["async", "bitreq/async-https-rustls-probe"]
