[package]
name = "esplora-client"
version = "0.12.2"
edition = "2021"
authors = [
  "Alekos Filini <alekos.filini@gmail.com>",
  "Bitcoin Dev Kit Developers"
]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/bitcoindevkit/rust-esplora-client"
repository = "https://github.com/bitcoindevkit/rust-esplora-client"
documentation = "https://docs.rs/esplora-client/"
description = "Bitcoin Esplora API client library. Supports plaintext, TLS and Onion servers. Blocking or async."
keywords = ["bitcoin", "esplora"]
readme = "README.md"
rust-version = "1.75.0" # MSRV

[lib]
name = "esplora_client"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.194", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["std"], default-features = false }
bitcoin = { version = "0.32", features = ["serde", "std"], default-features = false }
hex = { version = "0.2.2", package = "hex-conservative" }
bitreq = { version = "0.3.5", optional = true }
# Default runtime when running async tests
tokio = { version = "1", features = ["time"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
electrsd = { version = "0.38.0", features = ["legacy", "esplora_a33e97e1", "bitcoind_download", "bitcoind_29_0"] }
# These pins are needed for `Cargo-minimal.lock`:
tar = { version = "0.4.45" } # blame: electrsd v0.38.0 -> bitcoind -> tar
log = { version = "0.4.29" } # blame: electrsd v0.38.0 -> bitcoind -> corepc_client
openssl-sys = { version = "0.9.114" } # blame: bitreq v0.3.5 -> native-tls -> openssl
openssl = { version = "0.10.78" } # blame: match `openssl-sys`
native-tls = { version = "0.2.11" } # blame: bitreq v0.3.5 -> native-tls
tempfile = { version = "=3.27.0" }  # blame: tempfile >=v3.16 requires getrandom >=v0.3
security-framework = { version = "=2.11.1" } # blame: rustls-native-certs 0.8.3 → security-framework 3.x (edition2024)

[features]
default = ["blocking", "blocking-https", "async", "async-https", "tokio"]

tokio = ["dep:tokio"]
async = ["bitreq/async", "bitreq/proxy", "bitreq/json-using-serde", "tokio?/time"]
async-https = ["async", "bitreq/async-https"]
async-https-native = ["async", "bitreq/async-https-native-tls"]
async-https-rustls = ["async", "bitreq/async-https-rustls"]
async-https-rustls-probe = ["async", "bitreq/async-https-rustls-probe"]

blocking = ["bitreq/proxy", "bitreq/json-using-serde"]
blocking-https = ["blocking", "bitreq/https"]
blocking-https-native = ["blocking", "bitreq/https-native-tls"]
blocking-https-rustls = ["blocking", "bitreq/https-rustls"]
blocking-https-rustls-probe = ["blocking", "bitreq/https-rustls-probe"]

[package.metadata.rbmt.toolchains]
stable = "1.95.0"
nightly = "nightly-2026-03-18"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.rbmt.lint]
allowed_duplicates = [
    "getrandom",
    "windows-sys",
    "wit-bindgen",
]

[package.metadata.rbmt.test]
# Don't test these features in isolation
exclude_features = [
    "tokio",
    "async-https",
    "async-https-native",
    "async-https-rustls",
    "async-https-rustls-probe",
    "blocking-https",
    "blocking-https-native",
    "blocking-https-rustls",
    "blocking-https-rustls-probe",
]
# Run tests using these exact feature sets
exact_features = [
    ["async", "blocking"],
    ["async-https", "blocking-https", "tokio"],
    ["async-https-native", "blocking-https-native", "tokio"],
    ["async-https-rustls", "blocking-https-rustls", "tokio"],
    ["async-https-rustls-probe", "blocking-https-rustls-probe", "tokio"],
]
